# py-scaffold

./: .dockerignore  .env.example  Makefile  README.md  bandit.yaml  main.py  manager.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: admin-ci.yml  example-ci.yml  teste-ci.yml
app/admin/: view.py
app/example/: model.py  service.py  view.py
config/: database.py  exceptions.py  log.py  metrics.py  settings.py
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
migrations/: env.py
prod/: Dockerfile
scripts/: __init__.py  create_ci.py
tests/: conftest.py  test_admin.py  test_example.py  test_health.py
tests/teste/: test_teste.py
