[project]
name = "py-scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "granian>=2.7.2",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "orjson>=3.11.7",
    "redis>=7.2.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "granian[reload]>=2.7.2",
    "pip-audit>=2.9.0",
    "ruff>=0.15.4",
    "semgrep>=1.79.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # security (bandit-like)
]

ignore = [
    "S101" # allow assert
]
