[project]
name = "py-scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "granian>=2.7.2",
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.39",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "granian[reload]>=2.7.2",
    "pip-audit>=2.9.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # security
    "I",   # import sort
    "SIM", # simplifications
    "C4",  # comprehensions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

